feat(app): the languages resources are updated (with make) if a qml file changes

--- a/tests/languages/CMakeLists.txt
+++ b/tests/languages/CMakeLists.txt
@@ -1,3 +1,14 @@
+# ====================================================================
+# languages/CMakeLists.txt
+# ====================================================================
+
+# This line prevent `.ts` files deletion.
+# See: https://bugreports.qt.io/browse/QTBUG-31860
+#
+# On October 17, 2016, this issue is marked `invalid` but it's a
+# bullshit. It's not tolerated to remove sources files.
+set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM true)
+
 # Build languages resource file.
 set(TS_FILES)
 set(I18N_CONTENT "<!DOCTYPE RCC>\n<RCC version=\"1.0\">\n  <qresource prefix=\"/\">\n")
@@ -13,15 +24,22 @@ set(I18N_CONTENT "${I18N_CONTENT}  </qresource>\n</RCC>\n")
 
 file(WRITE "${CMAKE_BINARY_DIR}/${LANGUAGES_DIRECTORY}/${I18N_FILENAME}" "${I18N_CONTENT}")
 
-# --------------------------------------------------------------------
-
-# Prevent `.ts` files deletion.
-# See: https://bugreports.qt.io/browse/QTBUG-31860
-#
-# On October 17, 2016, this issue is marked `invalid` but it's a
-# bullshit. It's not tolerated to remove sources files.
-set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM true)
+# Compute QML files list.
+set(QML_SOURCES)
+file(STRINGS ${QRC_RESOURCES} QRC_RESOURCES_CONTENT)
+foreach (line ${QRC_RESOURCES_CONTENT})
+  set(result)
+  string(REGEX REPLACE
+    "^[ \t]+<file>[ \t]*(.+\\.qml)[ \t]*</file>[ \t]*$"
+    "\\1"
+    result
+    ${line})
+  string(REGEX MATCH "qml$" isQml ${result})
+  if (NOT ${isQml} STREQUAL "")
+    list(APPEND QML_SOURCES "${CMAKE_SOURCE_DIR}/${result}")
+  endif ()
+endforeach ()
 
 # Create `qm` files from `ts` files.
-qt5_create_translation(QM_FILES ${TS_FILES} ${SOURCES} ${HEADERS})
+qt5_create_translation(QM_FILES ${TS_FILES} ${SOURCES} ${HEADERS} ${QML_SOURCES})
 add_custom_target(update_translations DEPENDS ${QM_FILES})
