feat(CMakeLists.txt): add `remove_qm_files` target

--- a/tests/languages/CMakeLists.txt
+++ b/tests/languages/CMakeLists.txt
@@ -42,4 +42,11 @@ endforeach ()
 
 # Create `qm` files from `ts` files.
 qt5_create_translation(QM_FILES ${TS_FILES} ${SOURCES} ${HEADERS} ${QML_SOURCES})
+
+# Translations target must be called by `make`|`make all`.
 add_custom_target(update_translations DEPENDS ${QM_FILES})
+
+# Remove *.qm when `clean` is called.
+add_custom_target(remove_qm_files
+  COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_BINARY_DIR}/${LANGUAGES_DIRECTORY}/*.qm"
+)
