fix(assets/languages/CMakeLists.txt): fix deletion of `*.qm` files

--- a/tests/assets/languages/CMakeLists.txt
+++ b/tests/assets/languages/CMakeLists.txt
@@ -31,7 +31,7 @@ qt5_create_translation(QM_FILES ${TS_FILES} ${SOURCES} ${HEADERS} ${QML_SOURCES}
 add_custom_target(update_translations DEPENDS ${QM_FILES})
 
 # Remove `*.qm` when `clean` is called.
-set_directory_properties(ADDITIONAL_MAKE_CLEAN_FILES ${QM_FILES})
+set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${QM_FILES}")
 
 # Command to just remove `.qm` files.
 add_custom_target(remove_qm_files
