feat(MainWindow): supports account status

--- a/tests/assets/languages/CMakeLists.txt
+++ b/tests/assets/languages/CMakeLists.txt
@@ -1,5 +1,5 @@
 # ====================================================================
-# languages/CMakeLists.txt
+# assets/languages/CMakeLists.txt
 # ====================================================================
 
 # This line prevent `.ts` files deletion.
