--- a/assets/languages/CMakeLists.txt
+++ b/assets/languages/CMakeLists.txt
@@ -6,7 +6,7 @@
 # See: https://bugreports.qt.io/browse/QTBUG-31860
 #
 # On October 17, 2016, this issue was marked `invalid` but it's a
-# bullshit. It's not tolerated to remove sources files.
+# bullshit. It's not tolerated to remove source files.
 set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM true)
 
 # Build languages resource file.
