--- a/assets/languages/CMakeLists.txt
+++ b/assets/languages/CMakeLists.txt
@@ -11,40 +11,75 @@ set_directory_properties(PROPERTIES CLEAN_NO_CUSTOM true)
 
 # Build languages resource file.
 set(TS_FILES)
-set(I18N_CONTENT "<!DOCTYPE RCC>\n<RCC version=\"1.0\">\n  <qresource prefix=\"/\">\n")
-foreach (lang ${LANGUAGES})
-  list(APPEND TS_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${lang}.ts")
+set(QM_FILES)
+set(QM_FILES_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}")
 
+set(I18N_CONTENT "<!DOCTYPE RCC>\n<RCC version=\"1.0\">\n  <qresource>\n")
+foreach (lang ${LANGUAGES})
   # Note: the below `languages/` path is not the same as the `${LANGUAGES_DIRECTORY}` value.
   # It's the symbolic path used by the linphone binary in the qrc model.
   # This path is used in `app.cpp`.
   set(I18N_CONTENT "${I18N_CONTENT}    <file alias=\"languages/${lang}\">${lang}.qm</file>\n")
-endforeach ()
+
+  list(APPEND TS_FILES "${CMAKE_CURRENT_SOURCE_DIR}/${lang}.ts")
+  list(APPEND TARGET_TS_FILES "${CMAKE_CURRENT_BINARY_DIR}/${lang}.ts")
+  list(APPEND QM_FILES "${CMAKE_CURRENT_BINARY_DIR}/${lang}.qm")
+endforeach()
+
 set(I18N_CONTENT "${I18N_CONTENT}  </qresource>\n</RCC>\n")
 
 file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/${I18N_FILENAME}" "${I18N_CONTENT}")
 
-# Create `qm` files from `ts` files.
-qt5_create_translation(QM_FILES ${TS_FILES} ${SOURCES} ${HEADERS} ${QML_SOURCES} OPTIONS -no-obsolete)
+#Files or directories to inspect for translations references
+set(TRANSLATION_SOURCES)
+list(APPEND TRANSLATION_SOURCES "${PROJECT_SOURCE_DIR}/src")
+list(APPEND TRANSLATION_SOURCES "${PROJECT_SOURCE_DIR}/ui")
 
-# Workaround: Create empty files for some cmake versions. Otherwise, the qm rules can't be used.
-foreach (qm ${QM_FILES})
-  if (NOT EXISTS "${qm}")
-    file(GENERATE OUTPUT "${qm}" CONTENT "")
-  endif ()
-endforeach ()
+if (WIN32)
+  foreach (lang ${LANGUAGES})
+    file(READ "${CMAKE_CURRENT_SOURCE_DIR}/${lang}.ts" content)
+    set(cleanedContent)
+    string(REPLACE "\r" "" cleanedContent "${content}")
+    file(WRITE "${CMAKE_CURRENT_SOURCE_DIR}/${lang}.ts" "${cleanedContent}")
+  endforeach()
+endif()
 
-# Update translations.
+set(LUPDATE_OPTIONS "-no-obsolete")
+set(LRELEASE_OPTIONS "")
+
+#Clean existing generated file to force re-creation
+file(REMOVE ${QM_FILES})
+file(REMOVE ${TARGET_TS_FILES})
+
+add_custom_command(OUTPUT ${TARGET_TS_FILES}
+  COMMAND ${Qt5_LUPDATE_EXECUTABLE}
+  ARGS ${LUPDATE_OPTIONS} ${TRANSLATION_SOURCES} -ts ${TS_FILES}
+  COMMAND ${CMAKE_COMMAND} -E copy ${TS_FILES} ${CMAKE_CURRENT_BINARY_DIR}
+  VERBATIM
+  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+  COMMENT "Updating translation source files (ts)..."
+)
+
+add_custom_command(OUTPUT ${QM_FILES}
+  COMMAND ${Qt5_LRELEASE_EXECUTABLE}
+  ARGS ${TARGET_TS_FILES} ${LRELEASE_OPTIONS}
+  DEPENDS ${TARGET_TS_FILES}
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  VERBATIM
+  COMMENT "Creating compiled translation files (qm)..."
+)
+
+#The dependency	on custom_command Output is important
 add_custom_target(update_translations
-  COMMAND ${CMAKE_COMMAND} "-DLANGUAGES=\"${LANGUAGES}\"" -P "${CMAKE_CURRENT_SOURCE_DIR}/clean_translations.cmake"
   DEPENDS ${QM_FILES}
-  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
 )
 
 # Remove `*.qm` when `clean` is called.
 set_directory_properties(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${QM_FILES}")
 
-# Command to just remove `.qm` files.
-add_custom_target(remove_qm_files
-  COMMAND ${CMAKE_COMMAND} -E remove ${QM_FILES}
-)
+# Workaround: Create empty files for some cmake versions. Otherwise, the qm rules can't be used.
+# foreach (qm ${QM_FILES})
+#   if (NOT EXISTS "${qm}")
+#     file(GENERATE OUTPUT "${qm}" CONTENT "")
+#   endif()
+# endforeach()
